# Unity-Yamae-Code

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README_KO.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
Editor/: BuildEntryPoint.cs
config/: default.yml
docs/: ANALYSIS.md  ARCHITECTURE.md  RELEASE_CHECKLIST.md  UPGRADE_REPORT.md
kunity_yamae/: cli.py  cli_init_agent.py  cli_install.py  cli_orchestrate.py  cli_providers.py  cli_release_check.py  cli_run.py  cli_run_config.py  cli_run_payload.py  cli_run_steps.py  cli_scan.py  cli_tools.py  cli_verify.py  cli_work.py  constants.py  context.py  contract_errors.py  contracts.py  contracts_v2.py  desktop_integration.py  editor_probe_stage.py  live_plan.py  memory_store.py  observability.py  orchestration_status.py  orchestrator.py  path_locks.py  profile_cache.py  project_assumption_hygiene.py  project_files.py  quality_gates.py  risk.py  risk_checks.py  run_pipeline.py  scanner.py  semantic_index.py  tool_catalog.py  tool_registry.py  unity_adapters.py  unity_profile.py  (+10 more)
tests/: test_agent_harness_architecture_docs.py  test_agent_harness_artifact_hygiene.py  test_agent_harness_entrypoints.py  test_agent_harness_readme.py  test_agent_harness_readme_ko.py  test_agent_harness_release.py  test_agent_harness_setup_flow.py  test_agent_harness_v2_contracts.py  test_agent_init.py  test_agent_patch_loop.py  test_agent_prompt_context.py  test_agent_prompt_truthfulness.py  test_architecture_facts.py  test_cleanup_architecture.py  test_cli_context.py  test_cli_orchestrate.py  test_cli_tools.py  (+39 more)
(+17 files in other folders)
