[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kunity-yamae"
version = "0.1.0"
description = "K-Unity-Yamae: A thin, risk-adaptive Unity agent harness for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "K-Unity-Yamae Contributors" }]
keywords = ["unity", "ai", "agent", "harness", "codex", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
kunity-yamae = "kunity_yamae.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
